--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,12 @@ dependencies:
     sdk: flutter
   change_app_package_name: ^0.1.1
   flutter_native_splash: ^0.1.9
+  flutter_launcher_icons: "^0.7.3"
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "images/icon.png"
+
 flutter_native_splash:
   image: "images/splash.png"
   color: "ffffff"
